phase-07-kubernetes-helm/day-34-ingress-networking/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: devsecops-ingress

spec:
  ingressClassName: nginx

  rules:
    - host: devsecops.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: devsecops-web-service
                port:
                  number: 80
